--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-circle">
-                    <img src="profile.jpg" alt="Kwizera Profile">
+                    <img src="C:\Users\kwize\OneDrive\Desktop\Portofolio\STEVOOOOO.jpg" alt="Kwizera Profile">
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-icon">
