--- a/about.html
+++ b/about.html
@@ -15,11 +15,19 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-buttons">
                 <button class="theme-toggle" id="themeToggle">🌙</button>
-                <a href="#" class="btn-download">Download CV</a>
+                <a href="cv.html" class="btn-download" target="_blank">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px;">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                    </svg>
+                    Download CV
+                </a>
             </div>
         </div>
     </nav>
@@ -28,7 +36,7 @@
         <div class="about-container">
             <div class="about-image">
                 <div class="profile-circle">
-                    <img src="C:\Users\kwize\OneDrive\Desktop\Portofolio\26076\WhatsApp Image 2024-08-10 at 01.01.44_abfd4819.jpg" alt="Kwizera Profile">
+                    <img src="WhatsApp Image 2024-08-10 at 01.01.44_abfd4819.jpg" alt="Kwizera Profile">
                 </div>
             </div>
             <div class="about-content">
@@ -87,5 +95,6 @@
     </main>
 
     <script src="about.js"></script>
+    <script src="cv-download.js"></script>
 </body>
 </html>
