--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,19 @@
                 <li><a href="services.html">Services</a></li>
                 <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-buttons">
                 <button class="theme-toggle" id="themeToggle">🌙</button>
-                <a href="#" class="btn-download">Download CV</a>
+                <a href="cv.html" class="btn-download" target="_blank">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px;">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                    </svg>
+                    Download CV
+                </a>
             </div>
         </div>
     </nav>
@@ -40,31 +48,71 @@
             <div class="projects-grid">
                 <div class="project-card" data-category="web-design">
                     <div class="project-image">
-                        <img src="C:\Users\kwize\OneDrive\Desktop\Portofolio\26076\netops.png" alt="Network Operation">
+                        <img src="netops.png" alt="Network Operation">
                     </div>
                     <div class="project-info">
                         <span class="project-category">Web Design</span>
-                        <h3 class="project-name">network operation</h3>
+                        <h3 class="project-name">Network Operation</h3>
                     </div>
                 </div>
 
                 <div class="project-card" data-category="web-design">
                     <div class="project-image">
-                        <img src="C:\Users\kwize\OneDrive\Desktop\Portofolio\26076\main dashboard .png" alt="RRA Decision">
+                        <img src="main dashboard .png" alt="RRA Decision">
                     </div>
                     <div class="project-info">
                         <span class="project-category">Web Design</span>
-                        <h3 class="project-name">RRA DECISION</h3>
+                        <h3 class="project-name">RRA Decision Dashboard</h3>
                     </div>
                 </div>
 
                 <div class="project-card" data-category="web-design">
                     <div class="project-image">
-                        <img src="project3.jpg" alt="Eshop">
+                        <img src="project-eshop.svg" alt="Eshop">
                     </div>
                     <div class="project-info">
                         <span class="project-category">Web Design</span>
-                        <h3 class="project-name">Eshop</h3>
+                        <h3 class="project-name">E-Shop Platform</h3>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="web-design">
+                    <div class="project-image">
+                        <img src="project-web-app.svg" alt="Web Application">
+                    </div>
+                    <div class="project-info">
+                        <span class="project-category">Web Design</span>
+                        <h3 class="project-name">Modern Web Application</h3>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="ui-ux">
+                    <div class="project-image">
+                        <img src="project-ui-ux.svg" alt="UI/UX Design">
+                    </div>
+                    <div class="project-info">
+                        <span class="project-category">UI/UX</span>
+                        <h3 class="project-name">Mobile App UI Design</h3>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="app-design">
+                    <div class="project-image">
+                        <img src="project-app-design.svg" alt="App Design">
+                    </div>
+                    <div class="project-info">
+                        <span class="project-category">App Design</span>
+                        <h3 class="project-name">Mobile App Interface</h3>
+                    </div>
+                </div>
+
+                <div class="project-card" data-category="graphic-design">
+                    <div class="project-image">
+                        <img src="project-graphic-design.svg" alt="Graphic Design">
+                    </div>
+                    <div class="project-info">
+                        <span class="project-category">Graphic Design</span>
+                        <h3 class="project-name">Brand Identity Design</h3>
                     </div>
                 </div>
             </div>
@@ -72,5 +120,6 @@
     </main>
 
     <script src="projects.js"></script>
+    <script src="cv-download.js"></script>
 </body>
 </html>
