--- a/services.html
+++ b/services.html
@@ -15,11 +15,19 @@
                 <li><a href="services.html" class="active">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="experience.html">Experience</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="nav-buttons">
                 <button class="theme-toggle" id="themeToggle">🌙</button>
-                <a href="#" class="btn-download">Download CV</a>
+                <a href="cv.html" class="btn-download" target="_blank">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px;">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                        <polyline points="7 10 12 15 17 10"></polyline>
+                        <line x1="12" y1="15" x2="12" y2="3"></line>
+                    </svg>
+                    Download CV
+                </a>
             </div>
         </div>
     </nav>
@@ -39,7 +47,8 @@
                             <line x1="20" y1="35" x2="35" y2="35" stroke="#ff6b00" stroke-width="2"/>
                         </svg>
                     </div>
-                    <h3 class="service-name">UI/UX</h3>
+                    <h3 class="service-name">UI/UX Design</h3>
+                    <p class="service-description">Creating intuitive and user-friendly interfaces that enhance user experience and engagement.</p>
                 </div>
 
                 <div class="service-card">
@@ -53,6 +62,7 @@
                         </svg>
                     </div>
                     <h3 class="service-name">Web Design</h3>
+                    <p class="service-description">Designing responsive and modern websites that are both beautiful and functional.</p>
                 </div>
 
                 <div class="service-card">
@@ -66,6 +76,7 @@
                         </svg>
                     </div>
                     <h3 class="service-name">App Design</h3>
+                    <p class="service-description">Crafting mobile and desktop applications with focus on usability and aesthetics.</p>
                 </div>
 
                 <div class="service-card">
@@ -78,11 +89,13 @@
                         </svg>
                     </div>
                     <h3 class="service-name">Graphic Design</h3>
+                    <p class="service-description">Developing visual identities, logos, and branding materials that represent your brand.</p>
                 </div>
             </div>
         </div>
     </main>
 
     <script src="services.js"></script>
+    <script src="cv-download.js"></script>
 </body>
 </html>
